--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     </header>
     <main>
       <section class="section-two container mt-5 mb-5">
-        <div class="container px-4 text-center">
-          <div class="row g-3">
+        <div class="container text-center">
+          <div class="row g-5">
             <!-- Single Category -->
             <div class="col-lg-4 col-md-6 col-sm-12">
              <div class="px-4  rounded-3 bg-warning d-flex align-items-center justify-content-between">
@@ -134,7 +134,7 @@
       <section class="section-three my-5">
         <div class="container">
           <h2>Shoes</h2>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
             <div class="col">
               <div class="card card-shadow h-100 bg-body rounded">
                 <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -176,7 +176,7 @@
       <section class="section-four my-5">
         <div class="container">
           <h2>Bagpack</h2>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
             <div class="col">
               <div class="card card-shadow h-100 bg-body rounded">
                 <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
@@ -218,13 +218,21 @@
           <div id="subscribe" class="d-flex container flex-column justify-content-center align-items-center">
             <h2>LET'S STAY IN TOUCH</h2>
             <P>Get updates on sales, specials and more</P>
-            <input type="text">
-            <input class="main-btn text-left" type="submit" value="SUBMIT">
+            <!-- Form start -->
+            <form>
+              <div class="mb-1">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              </div>
+              <button type="submit" class="btn main-btn">Submit</button>
+            </form>
+            <!-- Form end -->
+            
           </div>
 
         </div>
       </section>
     </main>
+    <footer class="text-center text-dark"><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
