--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-5">
-                            <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
                         </div>                        
                     </div>
                   </div>
@@ -62,10 +62,10 @@
                     <div class="row p-5">
                         <div class="col-lg-7 col-md-7 d-flex align-items-center">
                             <div class="">
-                                <h1 class="h1">Cool Dude Headphone</h1>
+                                <h1 class="h1">X-Box for your living room</h1>
                                 <p>
-                                This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                                <p class="h1">$420</p>
+                                  This is the best x-box in the world for people who just want to waste time in front of the fake sports</p>
+                                <p class="h1">$600</p>
                                 <button class="main-btn">Buy Now</button>
                             </div>
                         </div>
@@ -80,8 +80,8 @@
                             <div class="">
                                 <h1 class="h1">Cool Dude Headphone</h1>
                                 <p>
-                                This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                                <p class="h1">$420</p>
+                                  This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                                <p class="h1">$1200</p>
                                 <button class="main-btn">Buy Now</button>
                             </div>
                         </div>
